--- a/sources/security/talk-on-security-process.asciidoc
+++ b/sources/security/talk-on-security-process.asciidoc
@@ -5,36 +5,30 @@ v1.0, Wed Feb 13 18:48:34 PST 2013
 
 link:/[Home]
 
-Disclaimer
-~~~~~~~~~~
+== Disclaimer
 
-I work for EngineYard, a company that's primary target is Rails hosting. Putting Rails in a good light is in the interest of the company I work for, so there might be understandable suspicion of bias. I hope that you, the reader, will read everything and make a critical judgement based on the facts I will present. The reason why I'm using Rails as a topic of discussion is how recent it is, and the fact that misconceptions have the chance to give people a false sense of security. 
+I work for EngineYard, a company that's primary target is Rails hosting. Putting Rails in a good light is in the interest of the company I work for, so there might be understandable suspicion of bias. I hope that you, the reader, will read everything and make a critical judgement based on the facts I will present. The reason why I'm using Rails as a topic of discussion is how recent it is, and the fact that misconceptions have the chance to give people a false sense of security.
 
-What's Up With These Rails Vulns?
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+== What's Up With These Rails Vulns?
+
 
 Recently Ruby On Rails have addressed a number of security vulnerabilities that can be viewed on their https://groups.google.com/forum/?fromgroups=#!forum/rubyonrails-security[security mailing list]. Unfortunately the frequency of the issues addressed caused some understood reactions. People were starting to consider if http://news.ycombinator.com/item?id=5203886[rails was viable due to all this]. There's even a http://www.didrailshaveamajorsecurityflawtoday.com[page dedicated to whether or not Rails has a security flaw]. So is Rails now a pile of security vulnerabilities that can no longer see the light of day in production? Quite the opposite I believe. To make the point I'm going to give a little introduction to how the security world works that you probably don't get to see that often.
 
-Inside Security
-~~~~~~~~~~~~~~~
+== Inside Security
 
-Responsible Disclosure
-^^^^^^^^^^^^^^^^^^^^^^
+=== Responsible Disclosure
 
 In talking about security vulnerabilities there are three main methods: Responsible Disclosure, Full Disclosure, and No Disclosure. https://help.github.com/articles/responsible-disclosure-of-security-vulnerabilities[GitHub's security policy] is an example of responsible disclosure. This means that you keep any information about the vulnerability to yourself, especially proof of concept code exploits, and channel your communications to the vendor in question. By doing this attackers have to work more to exploit the system, and can't simply drop the code onto their system and exploit the vulnerability right away. However, there are some cases where proof of concept exploit is released after the fact. The usual case for this is that the vendor has had a reasonable amount of time to patch and notify their customers. Whether or not this is effective will depend on the process the vendor has in place. In fact, the lack of a good process will lead you to the next type of disclosure, Full Disclosure.
 
-Full Disclosure
-^^^^^^^^^^^^^^^
+=== Full Disclosure
 
 Full Disclosure is where the entire details of an exploit, including proof of concept code, are released to the general public. Now the clock is ticking, and it will often force vendors to stop what they're doing to address the issue. I know the feeling of this because I've had to deal with it especially during the http://news.ycombinator.com/item?id=5139583[rubygems.org compromise]. However, in some cases it's the only way to get vulnerabilities addressed by the vendor. In fact this is such an issue that there's a http://seclists.org/fulldisclosure/[dedicated mailing list] for the sole purpose of putting these security issues face and center. The effectiveness of this system depends on if the person with the knowledge of the exploit chooses to release the information. This leads to the worst possible case, No Disclosure.
 
-No Disclosure
-^^^^^^^^^^^^^
+=== No Disclosure
 
-Someone is sitting on an exploit and doesn't tell anyone. Instead they use it to gain access to systems, with the admins in most cases completely unaware of the issue at hand. These are often referred to as http://en.wikipedia.org/wiki/Zero-day_attack[zero day] (or lovingly called by the security community 0day) attacks. In many cases it's about money. Take for example right after a Java security update was released, someone posted on 0day forums offering a 0day exploit to the tune of http://krebsonsecurity.com/2013/01/new-java-exploit-fetches-5000-per-buyer/[$5000 to 2 buyers]. Some companies such as PacketStorm look to battle this by http://packetstormsecurity.com/bugbounty/[offering bounties for exploits to be released in a responsible manner]. Whether or not the person holding the exploit goes to the right person is an impossible question to answer. 
+Someone is sitting on an exploit and doesn't tell anyone. Instead they use it to gain access to systems, with the admins in most cases completely unaware of the issue at hand. These are often referred to as http://en.wikipedia.org/wiki/Zero-day_attack[zero day] (or lovingly called by the security community 0day) attacks. In many cases it's about money. Take for example right after a Java security update was released, someone posted on 0day forums offering a 0day exploit to the tune of http://krebsonsecurity.com/2013/01/new-java-exploit-fetches-5000-per-buyer/[$5000 to 2 buyers]. Some companies such as PacketStorm look to battle this by http://packetstormsecurity.com/bugbounty/[offering bounties for exploits to be released in a responsible manner]. Whether or not the person holding the exploit goes to the right person is an impossible question to answer.
 
-Which Method Works?
-^^^^^^^^^^^^^^^^^^^
+=== Which Method Works?
 
 First I *highly* recommend reading this article by security expert Bruce Schneier on http://www.schneier.com/blog/archives/2007/01/debating_full_d.html[security disclosure]. In fact when you're done read as much of the articles he posts as possible, as he's an export source on security.
 
@@ -44,17 +38,16 @@ No Disclosure is obviously the worst case scenario, and I'm fairly certain anyon
     12/23/11 - Vulnerability disclosed
     12/23/11 - Patch released by vendor
     1/03/12 - Advisory published
-	
+
 The vendor was notified and fixed the issue the very same day. After a few days the discoverer of the exploit released details, but within a suitable time period to allow vendor notification. Now for the http://seclists.org/fulldisclosure/2012/Jan/180[bad example]:
 
-    2011-04-01 - Vulnerability reported to vendor    
+    2011-04-01 - Vulnerability reported to vendor
     2012-01-12 - 0Day advisory released in accordance with the ZDI 180 day
                  deadline policy
-				 
-That's right, *180 days* had passed before the discoverer gave up and put out the exploit details. In this case Full Disclosure is justified. Someone could be sitting on that exploit, utilizing it for no good. All of this is happening while you have the false sense that everything is okay. This, in point, is why the as soon as possible releases security releases of Rails, even in a constant stream, is a good thing. The community response to the exploits have also been very positive. The Dutch government for example http://www.zdnet.com/dutch-govt-pulls-ruby-on-rails-exploits-become-semi-automated-7000009691/[pulled their site offline to upgrade] when they realized they were vulnerable (which they knew because it got put front and center!). This is a drastic measure, but in my opinion the site going down with a security explanation is the best possible thing you can do for your users. Twitter and various blogs were also hot on getting people to upgrade. The whole event got people starting to talk more about security. This is *always* a good thing. 
 
-So What Do I Do?
-~~~~~~~~~~~~~~~~
+That's right, *180 days* had passed before the discoverer gave up and put out the exploit details. In this case Full Disclosure is justified. Someone could be sitting on that exploit, utilizing it for no good. All of this is happening while you have the false sense that everything is okay. This, in point, is why the as soon as possible releases security releases of Rails, even in a constant stream, is a good thing. The community response to the exploits have also been very positive. The Dutch government for example http://www.zdnet.com/dutch-govt-pulls-ruby-on-rails-exploits-become-semi-automated-7000009691/[pulled their site offline to upgrade] when they realized they were vulnerable (which they knew because it got put front and center!). This is a drastic measure, but in my opinion the site going down with a security explanation is the best possible thing you can do for your users. Twitter and various blogs were also hot on getting people to upgrade. The whole event got people starting to talk more about security. This is *always* a good thing.
+
+== So What Do I Do?
 
 *Educate Yourself*
 
@@ -66,8 +59,8 @@ Security is constantly evolving, and education is critical to keeping up with it
 
 * If you're a company, consider either having a dedicated security staff or hiring a security agency to evaluate your security. Also consider having security talks at regular intervals. Every week, every two weeks, just enough to keep it in as an important topic.
 * Look around security mailing lists. You don't have to be watching them like a hawk, but check out what's being exploited and why it's happening. Consider if your own software might be susceptible to such attacks.
-* Have a dedicated security page. Let people know how to contact you with security issues. Full Disclosure often occurs because the vendor doesn't have an easy to reach security liaison, and the reporter just gives up. Make sure you are very responsive to it as well! Even if it may take more than a day, talk it out with the reporter and see if you can't reach an agreement. Most reporters just want to know that you care. Also don't be afraid to ask for help! Finally *NEVER EVER BE RUDE TO SOMEONE REPORTING A SECURITY ISSUE*. Be thankful to them, because having someone in the security community on your bad side is *NEVER* a good thing. 
-* Consider general protection solutions. A good example of this is http://grsecurity.net[Grsecurity] (DISCLAIMER: my coworker is involved in this project) which offers protections against common exploit methods such as buffer overflows and information leaking on the OS level. 
+* Have a dedicated security page. Let people know how to contact you with security issues. Full Disclosure often occurs because the vendor doesn't have an easy to reach security liaison, and the reporter just gives up. Make sure you are very responsive to it as well! Even if it may take more than a day, talk it out with the reporter and see if you can't reach an agreement. Most reporters just want to know that you care. Also don't be afraid to ask for help! Finally *NEVER EVER BE RUDE TO SOMEONE REPORTING A SECURITY ISSUE*. Be thankful to them, because having someone in the security community on your bad side is *NEVER* a good thing.
+* Consider general protection solutions. A good example of this is http://grsecurity.net[Grsecurity] (DISCLAIMER: my coworker is involved in this project) which offers protections against common exploit methods such as buffer overflows and information leaking on the OS level.
 * Look into testing your system against known exploits. The https://github.com/rapid7/metasploit-framework[metasploit framework] (written in Ruby!) is a good open source collection of exploits for this purpose. When used internally, it can help locate potential attack vectors so you can address them as soon as possible.
 * Even with all this in place you can still get exploited. If this happens, be as transparent about the process as possible. Tell people as soon as you have information, even if it's something as simple as "someone has obtained unauthorized access to our systems and we'll fill you in with more details as we have them." Once you've sorted what happened, explain why it happened and what you are going to do to fix it. Otherwise people won't trust you in the worst way possible, and you'll end up losing a lot of users.
 
