--- a/sources/index.asciidoc
+++ b/sources/index.asciidoc
@@ -1,8 +1,7 @@
 The Personal Site of Chris White (cwgem)
 =======================================
 
-Introduction
-~~~~~~~~~~~~
+== Introduction
 
 Hello and welcome to my personal site hosted on http://pages.github.com[GitHub pages]. My name is Chris White and I work as a software engineer at http://www.engineyard.com[EngineYard]. I utilize a number of tools to get the job done, including http://www.perl.org[Perl], http://www.python.org[Python], and http://www.ruby-lang.org[Ruby]. Recently I started to look into http://www.erlang.org[Erlang] for API services. When I'm not programming I study Japanese, and hope to live and work there someday. My main open source project I work with is https://rvm.io[RVM]. Here's where you can find me:
 
@@ -11,28 +10,23 @@ Hello and welcome to my personal site hosted on http://pages.github.com[GitHub p
 * http://www.linkedin.com/pub/chris-white/1/760/884/[LinkedIn]
 * Email: cwprogram - live - com
 
-Articles
-~~~~~~~~
+== Articles
 
-Security
-^^^^^^^^
+=== Security
 
 * link:/security/talk-on-security-process.html[A Talk On Security Process]
 * link:/security/secure-workstation.html[The Secure Workstation]
 * link:/security/balanced-security.html[Balanaced Security]
 
-Git
-^^^
+=== Git
 
 * link:/git/git-force.html[On git push --force]
 * link:/git/git-rebase-fixing.html[Git Rebase Fixing]
 
-Python
-^^^^^^
+=== Python
 
 * link:/python/class-methods-and-self.html[Python Class Methods and self]
 
-Society
-^^^^^^^
+=== Society
 
 * link:/society/racism-and-sexism.html[Racism and Sexism]
