Giving articles a header so the heading levels work properly

--- a/sources/articles.asciidoc
+++ b/sources/articles.asciidoc
@@ -1,6 +1,8 @@
 Articles
 ========
 
+== Introduction
+
 These are a list of articles I've written on various topics. They are generated with AsciiDoc and edited with Emacs using adoc-mode. 
 
 === Security
