--- a/sources/security/secure-workstation.asciidoc
+++ b/sources/security/secure-workstation.asciidoc
@@ -40,10 +40,12 @@ This easily combines the two profiles giving the benefits of the hardened toolch
 
 The kernel used is  hardened-sources-3.7.8, which includes the http://grsecurity.net/[Grsecurity patchset], as well as a few other security related patchsets. The importance of utilizing this patchset can be addressed by this quote from the project website:
 
-[quote]
-____
+[subs="none"]
+++++
+<blockquote>
 Unlike other expensive security "solutions" that pretend to achieve security through known-vulnerability patching, signature-based detection, or other reactive methods, grsecurity provides real proactive security. The only solution that hardens both your applications and operating system, Grsecurity is essential for public-facing servers and shared-hosting environments.
-____
+</blockquote>
+++++
 
 While keeping the system up to date is important, it's often hard to keep up with complete accuracy. Grsecurity comes in by providing protection against common attack vectors that most exploits utilize. Configuring Grsecurity in the kernel is incredibly easy, and can be achieved by simply using auto configuration and setting to Desktop accordingly:
 
